chart overflow fix

--- a/frontend/less/espo/custom.less
+++ b/frontend/less/espo/custom.less
@@ -1206,6 +1206,11 @@ stream-head-text-container .span {
     font-size: @font-size-base;
 }
 
+.dashlet-body .legend-container {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 .legend-container table td {
     padding: 2px 2px;
     line-height: 1em;
